[metadata]
name = guipylib
version = 0.1.2
author = Casey Culbertson, Jason Zhang
author_email = jiajunzh@uw.edu
description = User Interface Library for pygame
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zjjc123/guipy
project_urls =
    Bug Tracker = https://github.com/zjjc123/guipy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where = guipy